2009-07-29 from iZsh:
	cmdparser.rb: Move to cmdparser/cmdparser.rb.
	general/fwselectoptions.rb: Move to cmdparser/fwselectoptions.rb.
	general/memaddroptions.rb: Move to cmdparser/memaddroptions.rb.
	fwpwn.rb: Modify accordingly.
	general/fwmemdump.rb: Likewise.
	macosx/fwmacloginpwd.rb: Likewise.
	macosx/fwmacosx.rb: Likewise.
	general/fwosdetect.rb: Likewise and Rename fwosdetect command to osdetect.
	README: Modify accordingly.

2009-07-28 from iZsh:
	README: Add a few information.
	cmdparser.rb: New file.
	fwpwn.rb: Likewise.
	AUTHORS: Likewise.
	LICENSE: Likewise.
	ChangeLog: Likewise.
	general/fwlist.rb: Likewise.
	general/fwmemdump.rb: Likewise.
	general/fwosdetect.rb: Likewise.
	general/fwselectoptions.rb: Likewise.
	general/memaddroptions.rb: Likewise.
	macosx/fwmacloginpwd.rb: Likewise.
	macosx/fwmacosx.rb: New files: Likewise.